<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/regProfilePhoto"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_margin="8dp"
        android:src="@drawable/ic_account_photo"
        app:layout_constraintBottom_toBottomOf="@+id/regName_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regName_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintBottom_toTopOf="@+id/regEmail_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/regName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:background="@drawable/reg_edittext_style"
            android:layout_margin="8dp"
            android:ems="10"
            android:inputType="textPersonName"
           />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regEmail_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <EditText
            android:id="@+id/regEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:background="@drawable/reg_edittext_style"
            android:layout_margin="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regPSW_layout"
        app:passwordToggleEnabled="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline">
        <EditText
            android:id="@+id/regPSW"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_psw"
            android:background="@drawable/reg_edittext_style"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/regPSW2_layout"
        app:passwordToggleEnabled="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toBottomOf="@+id/regPSW_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/regPSW2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_psw2"
            android:background="@drawable/reg_edittext_style"
            android:layout_margin="8dp"
            android:ems="10"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/button_style"
        android:text="@string/btn_register"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regPSW_layout"/>
    <TextView
        android:id="@+id/regLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/btn_login"
        android:textColor="@color/colorButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_reg"/>

    <ProgressBar
        android:id="@+id/regProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regPSW_layout"/>
</androidx.constraintlayout.widget.ConstraintLayout>