<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="Login with Email"
        android:textColor="@color/colorButton"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/loginEmail_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginEmail_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintBottom_toTopOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:background="@drawable/reg_edittext_style"
            android:layout_margin="8dp"
            android:ems="10"
            android:inputType="textEmailAddress"
          />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPSW_layout"
        app:passwordToggleEnabled="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/loginPSW"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_psw"
            android:background="@drawable/reg_edittext_style"
            android:layout_margin="8dp"
            android:ems="10"
            android:cursorVisible="false"
            android:inputType="textPassword"
         />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/button_style"
        android:text="@string/btn_login"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1"/>
    <TextView
        android:id="@+id/loginReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/btn_register"
        android:textColor="@color/colorButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"/>

    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1"/>

</androidx.constraintlayout.widget.ConstraintLayout>